Thu Oct 24 12:23:58 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_terminate_all): add a comment why we need
	  state check and call terminate_i again.

Thu Oct 24 12:15:02 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_terminate_all): add a comment why infinite
	  sleep is safe.

Thu Oct 24 07:41:42 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c: add new initial_growth_max tuning parameter.
	  [ruby-core:57928] [Bug #9035]
	* gc.c (heap_set_increment): when initial_growth_max is set,
	  do not grow number of slots by more than growth_max at a time.
	* gc.c (rb_gc_set_params): load optional new tuning value from
	  RUBY_HEAP_SLOTS_GROWTH_MAX environment variable.
	* test/ruby/test_gc.rb (class TestGc): test for above.

Thu Oct 24 01:34:12 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (rb_infinity_float): suppress overflow in
	  constant arithmetic warnings.  [ruby-core:57981] [Bug #9044]

Thu Oct 24 00:11:24 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/ostruct.rb: raise NoMethodError with a #name and #args.
	  Raise RuntimeError when modifying frozen instances
	  instead of TypeError.
	  (OpenStruct#each_pair): Return an enumerator with size
	  (OpenStruct#delete): Use the converted argument.
	  Patches by Kenichi Kamiya. [Fixes GH-383]

	* test/ostruct/test_ostruct.rb: Added tests for above.

Thu Oct 24 00:10:22 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* array.c: Add Array#to_h [Feature #7292]

	* enum.c: Add Enumerable#to_h

Wed Oct 23 23:48:28 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c: Rename free_min to min_free_slots and free_min_page to
	  max_free_slots. The algorithm for heap growth is:
	    if (swept_slots < min_free_slots) pages++
	    if (swept_slots > max_free_slots) pages--

Wed Oct 23 22:51:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (config.h): VC 2013 supports C99 mathematics